# rag-microapi

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: dependencies.py
app/api/v1/: router.py
app/api/v1/endpoints/: debug.py  health.py  rag.py  ragas_dataset.py  report.py  report_metrics.py
app/application/services/: rag_service.py
app/core/: config.py  error_handlers.py  exceptions.py  log_config.py
app/domain/: defect_knowledge.py  defect_normalization.py  report_policy.py  source_normalization.py
app/domain/schemas/: common.py  debug.py  health.py  rag.py  ragas_dataset.py  report.py  report_metrics.py
app/infrastructure/clients/: gemini_client.py  qdrant_client.py  voyage_client.py
app/infrastructure/prompts/: report_generation_prompt.txt  system_prompt.txt  technical_qa_prompt.txt
app/metrics/: ragas_dataset_store.py  report_metrics_store.py
app/utils/: prompt_loader.py  report_aggregation.py  report_parser.py  timers.py
data/metrics/: report_metrics.jsonl
data/ragas/: ragas_dataset.json
nginx/: default.conf
tests/: test_health.py  test_rag.py
